hphp/test/quick/yield_return.php.expectf

Fatal error: Generators cannot return values using "return" in %s on line 7
